force-app/main/default/objects/Field_Tracking_Log_Config__mdt/Field_Tracking_Log_Config__mdt.object-meta.xml
<CustomObject>
    <description>To store configuration about which fields should be tracked on which object.</description>
    <label>Field Tracking Log Config</label>
    <pluralLabel>Field Tracking Log Configs</pluralLabel>
</CustomObject>