force-app/main/default/objects/Field_Tracking_Log_Config__mdt/fields/Is_High_Priority__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, changes trigger real-time notifications</description>
    <label>Is High Priority?</label>
    <type>Checkbox</type>
</CustomField>