force-app/main/default/objects/Field_Tracking_Log_Config__mdt/fields/Master_Label__c.field-meta.xml
<CustomField>
    <fullName>Master_Label__c</fullName>
    <description>Label to identify the config record</description>
    <label>Master Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>