force-app/main/default/objects/Field_Tracking_Log_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The API name of the object</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>